* Card content spacing and colors fixed
*Fixed the marging spacing of the cards to follow the guidelines
*The cards have now a better color constract in the shadow

--- a/src/stylesheet/components/button.scss
+++ b/src/stylesheet/components/button.scss
@@ -11,6 +11,7 @@
 	transition: background .2s;
 	color: unset;
 	outline: none;
+	cursor: pointer;
 	
 	&:hover{
 		background: rgba(117, 117, 117, .20);
