--- a/src/stylesheet/components/card.scss
+++ b/src/stylesheet/components/card.scss
@@ -1,14 +1,17 @@
-$gray: #CCC;
+$gray: #A2A2A2;
+$shadow: 0 1px 4px 0 $gray;
+$shadow-hover: 0 1px 16px 0 $gray;
 
 .n-card {
-	-webkit-box-shadow: 0 2px 2px 0 $gray;
-	box-shadow: 0 2px 2px 0 $gray;
+	-webkit-box-shadow: $shadow;
+	box-shadow: $shadow;
 	border-radius: 2px;
 	transition: box-shadow .2s;
+	margin: 6px;
 	
 	&:hover {
-		-webkit-box-shadow: 0 2px 2px 0 $gray;
-		box-shadow: 0 2px 2px 0 $gray;
+		-webkit-box-shadow: $shadow-hover;
+		box-shadow: $shadow-hover;
 	}
 
 	& > .n-card-media{
@@ -21,7 +24,7 @@ $gray: #CCC;
 		}
 	}
 
-	& > .n-card-title {
+	& > .n-card-content {
 		padding: 16px;
 
 		& > .n-card-title-text {
@@ -35,6 +38,7 @@ $gray: #CCC;
 
 	& > .n-card-actions {
 		padding: 8px;
+		border-top: 1px solid lighten($gray, 20%);
 
 		& > .n-button:first-child {
 			margin-right: 4px;
